Kubernetes/Database/Mysql/yamls/ig-mysql.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: traefik-mysql
  namespace: mysql
spec:
  entryPoints:
    - mysql-mariadb
  routes:
    - match: HostSNI(`*`)
      services:
        - name: proxysql
          port: 6033
