Kubernetes/Database/Mysql/yamls/phpmyadmin-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: mysql
  labels:
    app: phpmyadmin
    app.kubernetes.io/name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
        app.kubernetes.io/name: mysql
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: mysql
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-mysql-https-redirect
  namespace: mysql
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-mysql-security
  namespace: mysql
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-mysql-websecure
  namespace: mysql 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mysql.domain.com`)
      services:
        - name: phpmyadmin
          port: 80
            #          serversTransport: traefik-mysql-transport
      middlewares:
        - name: traefik-mysql-security
  tls:
    secretName: mysql-domain
    options:
      name: traefik-mysql-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-mysql-web
  namespace: mysql
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`mysql.domain.com`)
      services:
        - name: phpmyadmin
          port: 80
      middlewares:
        - name: traefik-mysql-https-redirect
